Optimize ChatListener hot path